# P2PSP-GUI

./: CMakeLists.txt  CMakeLists.txt~  Player.cpp  Player.h  Player.ui  QtGUIv1.pro  add_dialog.cpp  add_dialog.h  add_dialog.ui  addchannels.cpp  addchannels.h  dialog.ui  globalheader.h  helper.ui  icons.qrc  main.cpp  peer.cpp  peer.h  peerthread.cpp  peerthread.h  rundialog.cpp  rundialog.h  rundialog.ui  rundialogstorage.cpp  rundialogstorage.h
include/VLCQtCore/: Config.h
lib/: libVLCQtCore.so.1.1.0  libVLCQtWidgets.so.1.1  libVLCQtWidgets.so.1.1.0
lib/cmake/VLCQtCore/: VLCQtCoreTargets-release.cmake  VLCQtCoreTargets.cmake
lib/cmake/VLCQtWidgets/: VLCQtWidgetsConfigVersion.cmake  VLCQtWidgetsTargets-release.cmake  VLCQtWidgetsTargets.cmake
lib/pkgconfig/: libVLCQtCore.pc  libVLCQtWidgets.pc
